style.css
* {
    box-sizing: border-box;
    border: 0px;
    padding: 0px;
}

#grid-container {
    display: flex;
    flex-wrap: wrap;
    width: 672px;
    height: 672px;
    max-width: 1200px;
    margin: 0 auto;
}

h1 {
    text-align: center;
}

